updated files we worked together on when you visited port harcourt

--- a/assets/account2.css
+++ b/assets/account2.css
@@ -1,5 +1,5 @@
 .header {
-    background-image: url(/images/mobile-images/account_header_2.jpg);
+    background-image: url(../images/mobile-images/account_header_2.jpg);
     height: 30.4vw;
 }
 
