--- a/assets/portfolio.css
+++ b/assets/portfolio.css
@@ -1,5 +1,5 @@
 .header {
-    background-image: url(/images/mobile-images/portfolio_header_1.jpg);
+    background-image: url(../images/mobile-images/portfolio_header_1.jpg);
 }
 
 .servicesContainer{
@@ -7,23 +7,23 @@
 }
 
 #content1{
-    background-image: url(/images/mobile-images/portfolio_11.jpg);
+    background-image: url(../images/mobile-images/portfolio_11.jpg);
 }
 
 #content2{
-    background-image: url(/images/mobile-images/portfolio_12.jpg);
+    background-image: url(../images/mobile-images/portfolio_12.jpg);
 }
 
 #content3{
-    background-image: url(/images/mobile-images/portfolio_13.jpg);
+    background-image: url(../images/mobile-images/portfolio_13.jpg);
 }
 
 #content4{
-    background-image: url(/images/mobile-images/portfolio_14.jpg);
+    background-image: url(../images/mobile-images/portfolio_14.jpg);
 }
 
 #content5{
-    background-image: url(/images/mobile-images/portfolio_15.jpg);
+    background-image: url(../images/mobile-images/portfolio_15.jpg);
 }
 
 /* WEB VIEW */
@@ -35,7 +35,7 @@
     }
     
     .header::before {
-        background-image: url(/images/web-images/web_portfolio_header_1.jpg);
+        background-image: url(../images/web-images/web_portfolio_header_1.jpg);
     }
 
     .servicesContainer{
@@ -43,18 +43,18 @@
     }
 
     #content1{
-        background-image: url(/images/web-images/web_portfolio_11.jpg);
+        background-image: url(../images/web-images/web_portfolio_11.jpg);
     }
     
     #content2{
-        background-image: url(/images/web-images/web_portfolio_12.jpg);
+        background-image: url(../images/web-images/web_portfolio_12.jpg);
     }
     
     #content3{
-        background-image: url(/images/web-images/web_portfolio_13.jpg);
+        background-image: url(../images/web-images/web_portfolio_13.jpg);
     }
     
     #content4{
-        background-image: url(/images/web-images/web_portfolio_14.jpg);
+        background-image: url(../images/web-images/web_portfolio_14.jpg);
     }
 }
